# OctopusV

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SVmerger.py  logo.base  noxfile.py  pyproject.toml  sv_merger.py
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: SVCF_specifications.md  example_SVCF_format.svcf  report.html  stat.html
examples/callers_vcf_output/: pbsv_example.vcf
octopus/: Cargo.toml
octopus/src/: main.rs
src/SVoctopus/: SVoctopus.py
src/octopusv/: __init__.py  cli.py  sv.py
src/octopusv/bencher/: bench_utils.py  sv_bencher.py
src/octopusv/cli/: bench.py  cli.py  convert.py  correct.py  merge.py  plot.py  stat.py  svcf2bed.py  svcf2bedpe.py  svcf2vcf.py
src/octopusv/converter/: base.py  bnd2dup.py  bnd2inv.py  bnd2tra_forward.py  bnd2tra_reverse.py  mpi2tra.py  mpm2tra.py  mprtra2tra.py  nobnd.py  snmd_dndpi2tra.py  snmd_dndpr_tra2tra.py  stra2tra.py
src/octopusv/formatter/: svcf_to_bed_converter.py  svcf_to_bedpe_converter.py  svcf_to_vcf_converter.py
src/octopusv/merger/: TRA_merge_logic.py  base.py  interval_tree.py  merge_strategies.py  merger.py  sv_interval_tree.py  sv_interval_tree_merger.py  sv_merge_logic.py  sv_merger.py  sv_selector.py  tra_merger.py  upset_plotter.py
src/octopusv/ploter/: chromosome_plotter.py  size_plotter.py  type_plotter.py
src/octopusv/report/: generator.py  template.html
src/octopusv/stater/: chromosome_analyzer.py  genotype_analyzer.py  qc_analyzer.py  size_analyzer.py  sv_stater.py  type_analyzer.py
src/octopusv/transformer/: base.py  mp_bnd.py  no_bnd.py  same_chr_dnd.py  snmd_bndp.py  stra.py
src/octopusv/utils/: SV_classifier_by_chromosome.py  SV_classifier_by_type.py  construct_sample_string.py  normal_vcf_parser.py  parser.py  svcf_parser.py  svcf_utils.py
src/octopusv/vis/: __init__.py
test_env/: pyvenv.cfg
tests/: stat.txt  test_correct_end_to_end.py  test_octopusv.py  test_svim.svcf
tests/data/: stat.txt
tests/data/VCF_for_testing_correct/: example_mate_bnd_merge.vcf  example_mate_bnd_reciprocal.vcf  example_same_bnd_to_dup.vcf  example_single_TRA_to_TRA.vcf  example_special_no_mate_diff_bnd_pair_to_independent.vcf  test_mate_bnd_independent.vcf  test_mate_bnd_merge.vcf  test_mate_bnd_reciprocal.vcf  test_non_bnd_events.vcf  test_same_bnd_to_FTRA.vcf  test_same_bnd_to_INV.vcf  test_same_bnd_to_RTRA.vcf  test_same_bnd_to_dup.vcf  test_single_TRA_to_TRA.vcf  test_special_no_mate_diff_bnd_pair_to_independent.vcf  test_special_no_mate_diff_bnd_pair_to_reciprocal.vcf
tests/data/callers_vcf_output/: debreak_example.vcf  svaba_example.vcf
tests/data/output/: out_inter.svcf
tests/data/standard/: standard_inter.svcf  standard_intersection.svcf
tests/output/: output_mate_bnd_independent.vcf  output_same_bnd_to_FTRA.vcf  output_same_bnd_to_INV.vcf  output_same_bnd_to_RTRA.vcf  output_special_no_mate_diff_bnd_pair_to_reciprocal.vcf
